force-app/main/default/objects/WeekResearchResponseItem__c/WeekResearchResponseItem__c.object-meta.xml
<CustomObject>
    <label>周调研问题明细反馈</label>
    <nameField>
        <displayFormat>WRI-{YYYY}{MM}{DD}{000}</displayFormat>
        <label>周调研反馈明细 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>周调研问题明细反馈</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>