force-app/main/default/objects/WeekResearchResponseItem__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>WeekResearchResponse__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>结束日期</label>
    <type>Date</type>
</CustomField>