force-app/main/default/objects/WeekResearchResponseItem__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>WeekResearchResponse__c + &apos;_&apos;+ Week_Question_Item__c</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>