force-app/main/default/objects/WeekResearchResponseItem__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>记录原问题，避免问题后期更改，产生误会</description>
    <label>问题</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>