force-app/main/default/objects/WeekResearchResponseItem__c/fields/QuestionItemActive__c.field-meta.xml
<CustomField>
    <fullName>QuestionItemActive__c</fullName>
    <formula>TEXT( Week_Question_Item__r.Status__c ) == &apos;有效&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>问题明细是否仍有效</label>
    <type>Checkbox</type>
</CustomField>