force-app/main/default/objects/WeekResearchResponseItem__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>促销员日报提报时间</description>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>