force-app/main/default/objects/WeekResearchResponseItem__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>问题回复</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>