force-app/main/default/objects/WeekResearchResponseItem__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>WeekResearchResponse__r.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>开始日期</label>
    <type>Date</type>
</CustomField>