force-app/main/default/objects/WeekResearchResponseItem__c/fields/Week_Question_Item__c.field-meta.xml
<CustomField>
    <fullName>Week_Question_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>周调研问题明细</label>
    <referenceTo>Week_Question_Item__c</referenceTo>
    <relationshipName>Question_Item_WeekResearchResponseItems</relationshipName>
    <type>Lookup</type>
</CustomField>