force-app/main/default/objects/WeekResearchResponseItem__c/fields/WeekResearchActive__c.field-meta.xml
<CustomField>
    <fullName>WeekResearchActive__c</fullName>
    <formula>Week_Question_Item__r.Shop_Research__r.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>门店调查要求是否有效</label>
    <type>Checkbox</type>
</CustomField>