force-app/main/default/objects/WeekResearchResponseItem__c/fields/WeekResearchResponse__c.field-meta.xml
<CustomField>
    <fullName>WeekResearchResponse__c</fullName>
    <label>周调研问题反馈</label>
    <referenceTo>WeekResearchResponse__c</referenceTo>
    <relationshipLabel>周调研问题明细反馈</relationshipLabel>
    <relationshipName>WeekResearchResponseItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>